--- a/Suaah/Areas/Admin/Views/Countries/Index.cshtml
+++ b/Suaah/Areas/Admin/Views/Countries/Index.cshtml
@@ -17,8 +17,11 @@
 </div>
 
 }
-<form method="get" asp-action="Index" class="m-1">
-    <div class="row text-center">
+<div class="text-center row">
+    <button onclick="filter();" class="btn btn-outline-info my-4">Filter</button>
+</div>
+<form method="get" asp-action="Index" id="filter" style="display:none;" class="m-1">
+   <div class="row text-center">
         <div class="col-5 m-2">
             <label class="control-label">Search</label>
             <input name="name" class="form-control" list="list" value="@ViewBag.name" />
@@ -41,9 +44,10 @@
 
     </div>
     
+    
 </form>
 
-<div class="text-center">
+<div class="text-center" style="display:none;" id="full">
     <a asp-action="Index" class="btn btn-outline-info my-4">Back to Full List</a>
 </div>
 
@@ -79,6 +83,23 @@
 </table>
 @section Scripts{
     <script>
+        function filter() {
+    var form = document.getElementById("filter");
+    var btn = document.getElementById("full");
+    if (form.getAttribute("style") == "display:none;") {
+
+        form.setAttribute("style", "");
+        btn.setAttribute("style", "");
+
+    }
+
+    else { 
+     
+        form.setAttribute("style", "display:none;");
+        btn.setAttribute("style", "display:none;");
+    }
+}
+
         function go() {
             if (document.getElementById("ord").value == "desc") {
                 document.getElementById("ord").value = "asc";
