--- a/Suaah/Areas/Admin/Views/Flights/Index.cshtml
+++ b/Suaah/Areas/Admin/Views/Flights/Index.cshtml
@@ -16,8 +16,11 @@
 </div>
 
 }
-<form method="get" asp-action="Index" class="m-1">
-     <div class="row text-center">
+<div class="text-center row">
+    <button onclick="filter();" class="btn btn-outline-info my-4">Filter</button>
+</div>
+<form method="get" asp-action="Index" id="filter" style="display:none;" class="m-1">
+       <div class="row text-center">
         <div class="col-3 m-2 text-center" ><h3>Search</h3></div>
         <div class="col-3 m-2 text-center"><h3>Time</h3></div>
         <div class="col-3 m-2 text-center"><h3>Country</h3></div>
@@ -87,7 +90,7 @@
      <input type="submit" class="btn btn-outline-danger p-2  btn" style="width:100%" onclick="go();" />
 </form>
 
-<div class="text-center">
+<div class="text-center" style="display:none;" id="full">
     <a asp-action="Index" class="btn btn-outline-info my-4">Back to Full List</a>
 </div>
 <table class="table table-hover table-striped text-center p-3">
@@ -206,7 +209,24 @@ function select() {
     document.getElementById("list").innerHTML = data;
     }
 }
-  
+
+  function filter() {
+    var form = document.getElementById("filter");
+    var btn = document.getElementById("full");
+    if (form.getAttribute("style") == "display:none;") {
+
+        form.setAttribute("style", "");
+        btn.setAttribute("style", "");
+
+    }
+
+    else { 
+     
+        form.setAttribute("style", "display:none;");
+        btn.setAttribute("style", "display:none;");
+    }
+}
+
         function go() {
             if (document.getElementById("ord").value == "desc") {
                 document.getElementById("ord").value = "asc";
