--- a/Suaah/Areas/Admin/Views/SocialDatas/Index.cshtml
+++ b/Suaah/Areas/Admin/Views/SocialDatas/Index.cshtml
@@ -8,20 +8,22 @@
 }
 
 
-<div class="text-center  m-2 mt-5 p-5 h">
+<div class="text-center mt-5 p-5 h">
     <h1>Social Data</h1>
 </div>
 
 
 @if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Manager))
 {
-    <div class="m-2 mb-5">
+    <div class="m-2 mb-2">
         <a asp-action="Create" class="w-100 d-block btn btn-danger p-2">Create New Social Data</a>
     </div>
 }
-
-<form asp-action="Index" method="get">
-    <input name="order" id="ord" value="@ViewBag.order" hidden />
+<div class="text-center row">
+    <button onclick="filter();" class="btn btn-outline-info my-4">Filter</button>
+</div>
+<form method="get" asp-action="Index" id="filter" style="display:none;">
+     <input name="order" id="ord" value="@ViewBag.order" hidden />
  
 
     <div class="form-actions no-color text-center p-3">
@@ -45,7 +47,7 @@
     <br />
 </form>
 
-<div class="text-center">
+<div class="text-center" style="display:none;" id="full">
 
     <a asp-action="Index" class="btn btn-outline-info my-4">Back to Full List</a>
 
@@ -94,6 +96,24 @@
 </table>
 @section Scripts{
     <script>
+
+        function filter() {
+            var form = document.getElementById("filter");
+            var btn = document.getElementById("full");
+            if (form.getAttribute("style") == "display:none;") {
+
+                form.setAttribute("style", "");
+                btn.setAttribute("style", "");
+
+            }
+
+            else { 
+     
+                form.setAttribute("style", "display:none;");
+                btn.setAttribute("style", "display:none;");
+            }
+        }
+
         function go() {
             if (document.getElementById("ord").value == "desc") {
                 document.getElementById("ord").value = "asc";
