--- a/Suaah/Areas/Customer/Views/FlightBookings/Index.cshtml
+++ b/Suaah/Areas/Customer/Views/FlightBookings/Index.cshtml
@@ -10,7 +10,10 @@
 </div>
 <hr />
 
-<form method="get" asp-action="Index">
+<div class="text-center row">
+    <button onclick="filter();" class="btn btn-outline-info my-4">Filter</button>
+</div>
+<form method="get" asp-action="Index" id="filter" style="display:none;" >
     <input name="ordersort" id="ord" value="@ViewBag.ordersort" hidden />
     <input name="order" value="@ViewBag.order" hidden />
 
@@ -80,7 +83,7 @@
     <input type="submit" class="btn btn-outline-danger p-2  btn" style="width:100%" onclick="go();" />
 </form>
 
-<div class="text-center">
+<div class="text-center" style="display:none;" id="full">
     <a asp-action="Index" class="btn btn-outline-info my-4">Back to Full List</a>
 </div>
 <table class="table table-hover table-striped text-center p-3">
@@ -168,6 +171,23 @@
 </table>
 @section Scripts{
     <script>
+function filter() {
+    var form = document.getElementById("filter");
+    var btn = document.getElementById("full");
+    if (form.getAttribute("style") == "display:none;") {
+
+        form.setAttribute("style", "");
+        btn.setAttribute("style", "");
+
+    }
+
+    else { 
+     
+        form.setAttribute("style", "display:none;");
+        btn.setAttribute("style", "display:none;");
+    }
+}
+
         function go() {
             if (document.getElementById("ord").value == "desc") {
                 document.getElementById("ord").value = "asc";
