--- a/Suaah/Areas/Customer/Views/HotelBookings/Index.cshtml
+++ b/Suaah/Areas/Customer/Views/HotelBookings/Index.cshtml
@@ -13,8 +13,10 @@
     <h1>Booking Room(s)</h1>
 </div>
 
-
-<form asp-action="Index" method="get" class="m-5">
+<div class="text-center row">
+    <button onclick="filter();" class="btn btn-outline-info my-4">Filter</button>
+</div>
+<form method="get" asp-action="Index" id="filter" style="display:none;" class="m-5">
     <div class="form-actions no-color text-center p-3">
 
         <input type="search" list="rhotel" name="rhotel" value="@ViewData["rhotel"]" placeholder="Hotel Name" class="p-2" />
@@ -156,5 +158,23 @@
 
     <br>
 }
+@section Scripts{
+    <script>
 
+function filter() {
+    var form = document.getElementById("filter");
+    if (form.getAttribute("style") == "display:none;") {
+
+        form.setAttribute("style", "");
+
+    }
+
+    else { 
+     
+        form.setAttribute("style", "display:none;");
+    }
+}
+
+    </script>
+}
 
